# ontopack

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
crates/pack-cli/: Cargo.toml
crates/pack-cli/src/: main.rs
crates/pack-cli/tests/: cli.rs
crates/pack-core/: Cargo.toml
crates/pack-core/src/: chunk.rs  config.rs  embed.rs  enrichment.rs  index.rs  lib.rs  note.rs  pack.rs  process.rs  search.rs
crates/pack-mcp/: Cargo.toml
crates/pack-mcp/src/: main.rs  server.rs
crates/pack-server/: Cargo.toml
crates/pack-server/src/: api.rs  http.rs  lib.rs  viewer.rs
docs/: index.html  mcp.md  mvp.md  providers.md  real-test.md  system-deep-dive.md  tutorial.md  ui-upgrade-plan.md  viewer.md
docs/superpowers/plans/: 2026-05-22-ontopack-m1-core.md  2026-05-22-ontopack-m2a-process-chunks-incremental.md  2026-05-22-ontopack-post-m1-mvp-roadmap.md  2026-05-23-ontopack-m2b-embeddings-sqlite-vec.md  2026-05-23-ontopack-m2b-real-fastembed-provider.md  2026-05-23-ontopack-m2c-hybrid-rrf-search.md  2026-05-23-ontopack-m3-mcp-server.md  2026-05-23-ontopack-m4-serve-open-viewer.md  2026-05-23-ontopack-m7-universal-knowledge-ingest.md
docs/superpowers/specs/: 2026-05-22-ontopack-design.md
docs/test-results/: 2026-05-23-browser-qa.md  2026-05-23-capability-gated-search-m5e.md  2026-05-23-compact-ops-ui-m6a.md  2026-05-23-dashboard-api-m5c.md  2026-05-23-fast-search-m5d.md  2026-05-23-indexed-viewer-api-m5b.md  2026-05-23-keyframe-viewer-strip-m3.md  2026-05-23-local-media-intelligence-m3.md  2026-05-23-mac-provider-baseline-audit.md  2026-05-23-mcp-media-enrichment-m7c.md  2026-05-23-media-intelligence-e2e-m3.md  2026-05-23-media-preview-m5a.md  2026-05-23-perf-benchmark.md  2026-05-23-provider-adapters-m7e.md  2026-05-23-provider-priority-router-m7f.md  2026-05-23-provider-worker-loop-m7d.md  2026-05-23-real-test.md  2026-05-23-universal-ingest-m7ab.md  2026-05-23-vault-ui-phase1.md  2026-05-24-bundle-archive-m7f.md  2026-05-24-bundle-integrity-m7f.md  2026-05-24-doctor-command-m7.md  2026-05-24-duplicate-detection-m6.md  2026-05-24-import-frontmatter-yaml-m7f.md  2026-05-24-install-script-m7.md  2026-05-24-launch-agent-installer-m7.md  2026-05-24-link-gap-detection-m6.md  2026-05-24-local-provider-live-m7.md  2026-05-24-media-timeline-citations-m5.md  2026-05-24-orphan-detection-m6.md  2026-05-24-perf-benchmark-10k-m7.md  2026-05-24-performance-smoke-m7.md  2026-05-24-portable-bundle-directory-m7f.md  2026-05-24-portable-context-export-m7f.md  2026-05-24-portable-import-roundtrip-m7f.md  2026-05-24-provider-doctor-m7.md  2026-05-24-real-embed-runtime-m7.md  2026-05-24-real-smoke-portability-hardening-m7f.md  2026-05-24-related-recommendations-m6.md  2026-05-24-server-semantic-search-m5f.md  (+9 more)
output/perf/: ontopack-perf-20260523-m5f.json  ontopack-perf-20260523-m5g.json  ontopack-perf-20260524-m7-10k.json
scripts/: install-launch-agent.sh  install.sh  media-intelligence-test.sh  mvp-smoke.sh  perf-benchmark.sh  perf-smoke.sh  provider-doctor.py  real-test.sh  visible-ontology-pack.py  windows-smoke.ps1
scripts/providers/: auto_media_worker.py  auto_media_worker_test.py  fixture_media_worker.py  local_media_worker.py  local_media_worker_test.py  openai_vision_worker.py  openai_vision_worker_test.py
