[package]
name = "pack-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pack"
path = "src/main.rs"

[dependencies]
pack-core = { path = "../pack-core" }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
