[package]
name = "pack-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pack"
path = "src/main.rs"

[dependencies]
pack-core = { path = "../pack-core" }
pack-server = { path = "../pack-server" }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[features]
default = []
real-embed = ["pack-core/real-embed"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
