[package]
name = "pack-cli"
version = "0.1.0"
edition = "2021"
description = "OntoPack command-line interface for local-first knowledge packs."
license = "MIT"
repository = "https://github.com/NewTurn2017/ontopack"
homepage = "https://github.com/NewTurn2017/ontopack"
readme = "../../README.md"

[[bin]]
name = "pack"
path = "src/main.rs"

[dependencies]
pack-core = { path = "../pack-core" }
pack-server = { path = "../pack-server" }
anyhow = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tar = { workspace = true }
clap = { workspace = true }

[features]
default = []
real-embed = ["pack-core/real-embed", "pack-server/real-embed"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
