[package]
name = "pack-core"
version = "0.1.0"
edition = "2021"
description = "Core storage, indexing, search, and enrichment primitives for OntoPack."
license = "MIT"
repository = "https://github.com/NewTurn2017/ontopack"
homepage = "https://github.com/NewTurn2017/ontopack"
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
fastembed = { workspace = true, optional = true }
walkdir = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
real-embed = ["dep:fastembed"]
