[package]
name = "pack-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pack-mcp"
path = "src/main.rs"

[dependencies]
pack-core = { path = "../pack-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
