[package]
name = "pack-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server for exposing OntoPack packs to AI clients."
license = "MIT"
repository = "https://github.com/NewTurn2017/ontopack"
homepage = "https://github.com/NewTurn2017/ontopack"
readme = "../../README.md"

[[bin]]
name = "pack-mcp"
path = "src/main.rs"

[dependencies]
pack-core = { path = "../pack-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
