[package]
name = "pack-server"
version = "0.1.0"
edition = "2021"
description = "Local HTTP API and embedded viewer server for OntoPack."
license = "MIT"
repository = "https://github.com/NewTurn2017/ontopack"
homepage = "https://github.com/NewTurn2017/ontopack"
readme = "../../README.md"

[dependencies]
pack-core = { path = "../pack-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
real-embed = ["pack-core/real-embed"]
